# spv

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build.yml
src/: app.rs  lib.rs  macros.rs  main.rs  metrics.rs  probe.rs  process.rs  spv.rs  threads.rs  values.rs
src/core/: collection.rs  iteration.rs  metrics.rs  mod.rs  ordering.rs  probe.rs  process.rs  process_view.rs  time.rs  values.rs  view.rs
src/ctrl/: collectors.rs  mod.rs  processes.rs  span.rs
src/probe/: cpu.rs  dispatch.rs  mod.rs  process.rs  procfs.rs  thread.rs  values.rs
src/probes/: cpu.rs  dispatch.rs  mod.rs  process.rs  procfs.rs  values.rs
src/procfs/: cpu.rs  cpu_probe.rs  diskio_probe.rs  libc.rs  mod.rs  net_io_probe.rs  parsers.rs  process.rs  rates.rs  sysconf.rs
src/procfs/parsers/: mod.rs  process.rs  system.rs
src/triggers/: input.rs  mod.rs  pulse.rs  signal.rs
src/ui/: chart.rs  input.rs  labels.rs  layout.rs  metadata.rs  mod.rs  processes.rs  sort_processes.rs  tabs.rs  terminal.rs
tests/: processes_tests.rs
