[package]
name = "spv"
version = "0.1.0"
authors = ["Theo Gilbert"]
edition = "2018"
description = "Command line utility to supervize resource usage of processes"
license = "Apache-2.0"

[dependencies]
tui = "0.10.0"
termion = "1.5.5"
log = { version = " 0.4.11", features=["max_level_debug", "release_max_level_warn"] }
simplelog = "0.8.0"

[dev-dependencies]
tempfile = "3.1.0"
rstest = "0.6.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3