[package]
name = "spv"
version = "0.1.0"
authors = ["Theo Gilbert"]
edition = "2018"
description = "Command line utility to supervize resource usage of processes"
license = "Apache-2.0"

[dependencies]
tui = "0.13.0"
termion = "1.5.5"
log = { version = " 0.4.11", features = ["max_level_debug", "release_max_level_info"] }
simplelog = "0.9.0"
signal-hook = "0.2.2"
thiserror = "1.0.22"

[dev-dependencies]
tempfile = "3.1.0"
rstest = "0.6.4"
sn_fake_clock = "0.4.7"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3